--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -106,8 +106,8 @@
 
                 <hr color="#EBEFF2" style="border:1; margin-top:35px; opacity: 0.8;">
 
-                <nav class=" mt-2 ">
-                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
+                <nav class=" mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- <li class="nav-item">
                             <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_home_icon.svg"></i>
@@ -144,15 +144,15 @@
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="author_profilePage.html" class="nav-link ">
+                            <a href="author_profilePage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
                                 </p>
                             </a>
                         </li>
-                        <li class="nav-item ">
-                            <a href="../boundary/login_page.php" class="nav-link ">
+                        <li class="nav-item">
+                            <a href="../boundary/login_page.php" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
@@ -167,7 +167,7 @@
             <!-- /.sidebar -->
         </aside>
         <!-- Content Wrapper -->
-        <div class="content-wrapper ">
+        <div class="content-wrapper">
             <!-- <section class="content">
                 <div class="container-fluid"> -->
             <div class="row">
@@ -191,7 +191,7 @@
                                 <p class="col-sm-4">Paper name:</p>
                                 <div class="col-sm-4">
                                     <!-- retieve paper name -->
-                                    <label id="author_viewPaperName ">
+                                    <label id="author_viewPaperName">
                                                 <!-- PaperA -->
                                             </label>
                                 </div>
@@ -201,7 +201,7 @@
                                 <div class="col-sm-4">
                                     <!-- retieve paper conference -->
 
-                                    <label id="author_viewPaperConference ">
+                                    <label id="author_viewPaperConference">
                                                 <!-- Conference1 -->
                                             </label>
                                 </div>
@@ -210,7 +210,7 @@
                                 <p class="col-sm-4">Author:</p>
                                 <div class="col-sm-4">
                                     <!-- retieve author name -->
-                                    <label class="author_viewPaperAuthor ">
+                                    <label class="author_viewPaperAuthor">
                                                 <!-- Author1 -->
                                             </label>
                                 </div>
@@ -219,7 +219,7 @@
                                 <button type="button" id="author_editDetail" class="blue_btn" data-toggle="modal" data-target="#author_editPaperModal">
                                             Edit Detail
                                         </button>
-                                <button type="button" class="red_btn " data-toggle="modal" data-target="#deletePapereModal">
+                                <button type="button" class="red_btn" data-toggle="modal" data-target="#deletePapereModal">
                                         Delete paper
                                         </button>
                             </div>
@@ -227,13 +227,13 @@
                     </div>
                 </div>
 
-                <div class="col-md-7 " id="author_viewRevRatContainer ">
-                    <div class="card " style="margin-top: 20px;margin-bottom: 0; ">
-                        <div class="card-header " style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white; ">
-                            <div style="float:left;width: 3px;height: 28px; background: #109CF1; "></div>
-                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline; ">Paper review and rating</p>
+                <div class="col-md-7" id="author_viewRevRatContainer">
+                    <div class="card" style="margin-top: 20px;margin-bottom: 0;">
+                        <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
+                            <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
+                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Paper review and rating</p>
                         </div>
-                        <div class="card-body ">
+                        <div class="card-body">
                             <div class="row">
                                 <p class="col-sm-4">Paper rating:</p>
                                 <div class="col-sm-4">
@@ -248,7 +248,7 @@
                                 <p class="col-sm-4">Paper review:</p>
                                 <div class="col-sm-7">
                                     <!-- retrieve the review of paper-->
-                                    <p id="author_viewPaperReview ">
+                                    <p id="author_viewPaperReview">
                                         <!-- What is a review article? A review article can also be called a literature review, or a review of literature. It is a survey of previously published research on a topic. It should give an overview of current thinking on the topic. And, unlike an original
                                                 research article, it will not present new experimental results. Writing a review of literature is to provide a critical evaluation of the data available from existing studies. Review articles can identify
                                                 potential research areas to explore next, and sometimes they will draw new conclusions from the existing data. -->
@@ -265,7 +265,7 @@
                             <div class="card-body table-responsive pad">
 
                                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-secondary author_viewPaperAddRating active ">
+                                    <label class="btn btn-secondary author_viewPaperAddRating active">
                                                         <input type="radio" id="author_viewPaperAddRating3" autocomplete="off" checked> 3<br>(strong accept)
                                                     </label>
                                     <label class="btn btn-secondary author_viewPaperAddRating">
@@ -349,7 +349,7 @@
             <div class="modal-content">
                 <div class="modal-header">
 
-                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Save Account and data?</p>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Save Paper?</p>
                     <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button> -->
@@ -360,7 +360,7 @@
                         Cancel
                     </button>
                     <button type="button" style="float: right;background-color: #F7685B;color: white;" class="blue_btn">
-                        Confirm add
+                        Confirm save
                     </button>
                 </div>
                 <div class="modal-footer" style="border: none;">
@@ -402,22 +402,22 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body ">
+                <div class="modal-body">
                     <p>Paper ID:&nbsp;</p>
-                    <div class="detail ">
+                    <div class="detail">
                         <!-- get paperID from DB-->
-                        <label class="author_editPaperID ">12345678</label>
+                        <label class="author_editPaperID">12345678</label>
                     </div>
                     <p>Paper name:&nbsp;</p>
-                    <div class="detail ">
+                    <div class="detail">
                         <!-- get PaperName from DB-->
-                        <input type="text " class="form-control " id="author_editPaperName ">
+                        <input type="text" class="form-control" id="author_editPaperName">
 
                     </div>
-                    <p class="searchLeft ">Select conference </p>
-                    <div class="detail ">
+                    <p class="searchLeft">Select conference </p>
+                    <div class="detail">
 
-                        <select id="author_editConference " class="form-control select2 " style="width: 100% !important; ">
+                        <select id="author_editConference" class="form-control select2" style="width: 100% !important;">
                             <!-- retrieve conference number from db -->
                             <!-- <option>Conference1 </option>
                             <option>Conference2</option>
@@ -426,11 +426,11 @@
                             <option>Conference5</option> -->
                             </select>
                     </div>
-                    <p class="searchLeft ">Select author </p>
-                    <div class="detail ">
+                    <p class="searchLeft">Select author </p>
+                    <div class="detail">
 
 
-                        <select id="author_editAuthorName " class="form-control select2 col-sm-4 " multiple="multiple " style="width: 100% !important; ">
+                        <select id="author_editAuthorName" class="form-control select2 col-sm-4" multiple="multiple" style="width: 100% !important;">
                                 <!-- retrieve author name from db -->
                                 <!-- <option>Author1 </option>
                                 <option>Author2</option>
@@ -440,30 +440,30 @@
 
                             </select>
                     </div>
-                    <p for="exampleInputFile ">Upload paper:</p>
-                    <div class="form-group ">
+                    <p for="exampleInputFile">Upload paper:</p>
+                    <div class="form-group">
 
-                        <div class="input-group ">
-                            <div class="custom-file ">
-                                <input type="file " class="custom-file-input " id="exampleInputFile ">
-                                <label class="custom-file-label " for="exampleInputFile ">Choose file</label>
+                        <div class="input-group">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="exampleInputFile">
+                                <label class="custom-file-label" for="exampleInputFile">Choose file</label>
                             </div>
-                            <div class="input-group-append ">
-                                <span class="input-group-text ">Upload</span>
+                            <div class="input-group-append">
+                                <span class="input-group-text">Upload</span>
                             </div>
                         </div>
                     </div>
-                    <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
+                    <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
                             Back
                         </button>
-                    <!-- <button type="button " id="author_saveEditPaper " style="float: right; color: white; margin-right: 10px; " class="blue_btn " data-toggle="modal " data-target="#saveModal ">
+                    <!-- <button type="button" id="author_saveEditPaper" style="float: right; color: white; margin-right: 10px;" class="blue_btn" data-toggle="modal" data-target="#saveModal">
                             Save
                         </button> -->
                     <button type="button" class="blue_btn" data-toggle="modal" data-target="#saveModal" id="author_saveEditPaper">
                             Save
                         </button>
                 </div>
-                <div class="modal-footer " style="border: none; ">
+                <div class="modal-footer" style="border: none;">
                 </div>
             </div>
         </div>
@@ -486,22 +486,12 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
 
     <script>
-        $(".nav .nav-link ").on("click ", function() {
-            $(".nav ").find(".active ").removeClass("active ");
-            $(this).addClass("active ");
+        $(".nav .nav-link").on("click", function() {
+            $(".nav").find(".active").removeClass("active");
+            $(this).addClass("active");
         });
 
         $(function() {
-
-            // $('#searchUser').DataTable({
-            //     "paging": true,
-            //     "lengthChange": false,
-            //     "searching": false,
-            //     "ordering": false,
-            //     "info": false,
-            //     "autoWidth": false,
-            //     "responsive": false,
-            // });
             //Initialize Select2 Elements
             $('.select2').select2();
             //Initialize Select2 Elements
